--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "3.0.0",
-    "jade": "*"
+    "jade": "*",
+	"mongodb": "*"
   },
   "engines": {
     "node": "0.8.x",
